--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ bla bla
 </body>
 </body>
 <script src="/socket.io/socket.io.js"></script>
-	<script src="client/clientMain.js"></script>
+	<script src="/server1.js"></script>
 </html>
     
